# velontri

./: .gitignore  README.md  RENDER_DEPLOY.md  package-lock.json  package.json  pxxl.json  render.yaml  test_err.txt
.github/workflows/: frontend-ci.yml
.velontri/planning/: 01-information-architecture.md  02-route-structure.md  03-dashboard-wireframes.md  04-navigation-maps.md  05-rbac-matrix.md  06-permission-matrix.md  07-user-flow-diagrams.md  08-component-hierarchy.md  09-responsive-layout-plan.md  10-feature-mapping-matrix.md
backend/: .env.production.example  conftest.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  start.sh
backend/ai-service/: Dockerfile  _dev_boot.py  requirements.txt
backend/analytics-service/: Dockerfile  _dev_boot.py  requirements.txt
backend/shared/: __init__.py  auth.py  config.py  database.py  db_path.py  errors.py  fx.py  health.py  jwt_utils.py  logging.py  metrics.py  middleware.py  pyproject.toml  rabbitmq.py  redis_client.py  s3.py
docs/: API_GATEWAY_DESIGN.md  BACKEND_AUDIT_REPORT.md  ERROR_CATALOG.md  EXECUTION_PLAN.md  FILE_UPLOAD_GUIDE.md  FRONTEND_ARCHITECTURE.md  FRONTEND_INTEGRATION_GUIDE.md  MOBILE_OFFLINE_ARCHITECTURE.md  PRD.md  PRODUCTION_DEPLOYMENT_GUIDE.md  REALTIME_EVENTS.md  ROLE_PERMISSION_MATRIX.md  SWAGGER_CUSTOMIZATION.md  THIRD_PARTY_INTEGRATION_GUIDE.md  WEBSOCKET_DOCUMENTATION.md  postman_collection.json
frontend/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
(+494 files in other folders)
