[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velontri-shared"
version = "1.0.0"
description = "Shared utilities for all Velontri microservices"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis[hiredis]==5.0.4",
    "aio-pika==9.4.1",
    "aioboto3==12.4.0",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "PyJWT[crypto]==2.8.0",
    "bcrypt==4.1.3",
    "pyotp==2.9.0",
    "structlog==24.1.0",
    "prometheus-client==0.20.0",
    "python-magic==0.4.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
